fix: overflow behavior

--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -716,6 +716,10 @@ video {
   align-self: center;
 }
 
+.overflow-auto {
+  overflow: auto;
+}
+
 .overflow-y-auto {
   overflow-y: auto;
 }
